# AserPTA

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmarks.org  output.txt  run.sh
include/aser/PointerAnalysis/: PointerAnalysisPass.h
include/aser/PointerAnalysis/Context/: HybridCtx.h  KCallSite.h  KOrigin.h  NoCtx.h  PtrRingBuffer.h
include/aser/PointerAnalysis/Graph/: CallGraph.h
include/aser/PointerAnalysis/Graph/ConstraintGraph/: CGNodeBase.h  CGObjNode.h  CGPtrNode.h  ConstraintGraph.h  SCCIterator.h
include/aser/PointerAnalysis/Graph/GraphBase/: GraphBase.h
include/aser/PointerAnalysis/Models/: DefaultHeapModel.h
include/aser/PointerAnalysis/Models/LanguageModel/: ConsGraphBuilder.h  LangModelBase.h
include/aser/PointerAnalysis/Models/LanguageModel/DefaultLangModel/: DefaultLangModel.h
include/aser/PointerAnalysis/Models/MemoryModel/: AllocSite.h  MemModelTrait.h
include/aser/PointerAnalysis/Models/MemoryModel/FieldInsensitive/: FICanonicalizer.h  FIMemModel.h  FIObject.h
include/aser/PointerAnalysis/Models/MemoryModel/FieldSensitive/: FSMemModel.h  FSObject.h  MemBlock.h
include/aser/PointerAnalysis/Models/MemoryModel/FieldSensitive/Layout/: MemLayout.h  MemLayoutManager.h
include/aser/PointerAnalysis/Program/: CallSite.h  CtxFunction.h  CtxModule.h  Pointer.h
include/aser/PointerAnalysis/Solver/: AndersenWave.h  DeepPropagation.h  PartialUpdateSolver.h  SolverBase.h  WavePropagation.h
include/aser/PointerAnalysis/Solver/PointsTo/: BitVectorPTS.h  PTSTrait.h  PointedByPts.h
include/aser/PreProcessing/: IRPreProcessor.h  PreProcPassManagerBuilder.h
include/aser/PreProcessing/Passes/: CanonicalizeGEPPass.h
include/aser/Util/: CtxInstVisitor.h  GraphWriter.h  Iterators.h  Log.h  Statistics.h  Util.h
include/spdlog/fmt/: bin_to_hex.h
include/spdlog/fmt/bundled/: core.h
lib/aser/: CMakeLists.txt
lib/aser/PointerAnalysis/: CMDOptions.cpp
lib/aser/PointerAnalysis/Model/: DefaultHeapModel.cpp  MemModels.cpp
lib/aser/PointerAnalysis/Model/FieldSensitive/: FSLayouts.cpp
lib/aser/PointerAnalysis/Program/: Program.cpp
lib/aser/PointerAnalysis/Solver/: PointsToSet.cpp
lib/aser/PreProcessing/: IRPreProcessor.cpp  PreProcPassManagerBuilder.cpp
lib/aser/PreProcessing/Passes/: CanonicalizeGEPPass.cpp  InsertGlobalCtorCallPass.cpp  LoweringMemCpyPass.cpp  RemoveASMInstPass.cpp  StandardHeapAPIRewritePass.cpp  WrapperFunIdentifyPass.cpp
lib/aser/Util/: Util.cpp
tools/: CMakeLists.txt
tools/WPA/: CMakeLists.txt  wpa.cpp
unittests/: CMakeLists.txt
unittests/PointerAnalysis/: CMakeLists.txt  PTAPassTest.cpp  TestDriver.cpp
unittests/PointerAnalysis/PTATestCases/: modified.ll  struct-incompab-typecast-nested.ll
